--- a/views/contact-us.pug
+++ b/views/contact-us.pug
@@ -22,24 +22,28 @@ html( lang="pl" )
 							type="text"
 							placeholder="Imię i nazwisko"
 							name="name"
+							required
 						)
 
 						input#email(
 							type="email"
 							placeholder="E-mail"
 							name="email"
+							required
 						)
 
 						input#subject(
 							type="text"
 							placeholder="Temat"
 							name="topic"
+							required
 						)
 
 						textarea#body.rounded(
 							rows="5"
 							placeholder="Napisz wiadomość..."
 							name="text"
+							required
 						)
 
 						.buttonNote
