--- a/public/style.css
+++ b/public/style.css
@@ -5605,7 +5605,7 @@ button.bg-dark:focus {
 .m-2 {
   margin: 0.5rem !important; }
 
-.mt-2, body .blog-content-wrapper .tags,
+.mt-2, body .blog-content-wrapper .content-wrapper h1,
 .my-2 {
   margin-top: 0.5rem !important; }
 
@@ -5632,6 +5632,7 @@ button.bg-dark:focus {
 
 .mr-3,
 .mx-3,
+body .blog-content-wrapper .title,
 .content-list {
   margin-right: 1rem !important; }
 
@@ -5641,6 +5642,7 @@ button.bg-dark:focus {
 
 .ml-3,
 .mx-3,
+body .blog-content-wrapper .title,
 .content-list {
   margin-left: 1rem !important; }
 
@@ -5655,7 +5657,7 @@ button.bg-dark:focus {
 .mx-4 {
   margin-right: 1.5rem !important; }
 
-.mb-4, .content-list .element,
+.mb-4, body .blog-content-wrapper .content-wrapper, body .blog-content-wrapper .content-wrapper h1, .content-list .element,
 .my-4 {
   margin-bottom: 1.5rem !important; }
 
@@ -5674,11 +5676,11 @@ button.bg-dark:focus {
 .mx-5 {
   margin-right: 3rem !important; }
 
-.mb-5, body .blog-content-wrapper .tags, body .blog-content-wrapper .content-wrapper,
+.mb-5,
 .my-5 {
   margin-bottom: 3rem !important; }
 
-.ml-5, body .blog-content-wrapper .title, body .blog-content-wrapper .authorWrapper, body .blog-content-wrapper .tags,
+.ml-5, body .blog-content-wrapper .authorWrapper,
 .mx-5 {
   margin-left: 3rem !important; }
 
@@ -5906,7 +5908,7 @@ button.bg-dark:focus {
 .my-auto {
   margin-bottom: auto !important; }
 
-.ml-auto,
+.ml-auto, body .blog-content-wrapper .tags,
 .mx-auto {
   margin-left: auto !important; }
 
@@ -6962,7 +6964,7 @@ button.bg-dark:focus {
 .text-right {
   text-align: right !important; }
 
-.text-center {
+.text-center, body .blog-content-wrapper .title {
   text-align: center !important; }
 
 @media (min-width: 576px) {
@@ -8042,13 +8044,16 @@ body .blog-content-wrapper {
       margin: 0;
       margin-left: 10px; }
   body .blog-content-wrapper .tags p {
-    font-size: 17.5px; }
+    font-size: 17.5px;
+    margin-bottom: 0; }
   body .blog-content-wrapper .content-wrapper img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     max-width: 80%;
     max-height: 50vh; }
+  body .blog-content-wrapper .content-wrapper p {
+    text-align: justify; }
 
 .content-list {
   opacity: 0;
