--- a/resources/scss/blog/_article.scss
+++ b/resources/scss/blog/_article.scss
@@ -15,9 +15,10 @@ body {
 
 		.title {
 			@extend .m-4;
-			@extend .ml-5;
+			@extend .mx-3;
 			@extend .display-4;
 			@extend .font-weight-bold;
+			@extend .text-center;
 		}
 
 		.authorWrapper {
@@ -43,17 +44,16 @@ body {
 		}
 
 		.tags {
-			@extend .ml-5;
-			@extend .mt-2;
-			@extend .mb-5;
+			@extend .ml-auto;
 
 			p {
 				font-size: 17.5px;
+				margin-bottom: 0;
 			}
 		}
 
 		.content-wrapper {
-			@extend .mb-5;
+			@extend .mb-4;
 
 			img {
 				display: block;
@@ -61,6 +61,15 @@ body {
 				margin-right: auto;
 				max-width: 80%;
 				max-height: 50vh;
+			}
+
+			h1 {
+				@extend .mb-4;
+				@extend .mt-2;
+			}
+
+			p {
+				text-align: justify;
 			}
 		}
 	}
