--- a/public/style.css
+++ b/public/style.css
@@ -8044,15 +8044,16 @@ body .blog-content-wrapper {
     margin: 0;
     margin-left: 10px;
     font-size: 25px; }
-  body .blog-content-wrapper .content-wrapper img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 80%;
-    max-height: 50vh; }
-  body .blog-content-wrapper .content-wrapper p {
-    text-align: justify;
+  body .blog-content-wrapper .content-wrapper {
     font-size: 19px; }
+    body .blog-content-wrapper .content-wrapper img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 80%;
+      max-height: 50vh; }
+    body .blog-content-wrapper .content-wrapper p {
+      text-align: justify; }
 
 .content-list {
   opacity: 0;
