Added target_blank to contact us

--- a/views/contact-us.pug
+++ b/views/contact-us.pug
@@ -55,21 +55,21 @@ html( lang="pl" )
 				section.row.no-gutters.icons
 					.row.no-gutters.d-flex
 						.col.icon1.p-0
-							a( href="https://www.facebook.com/lo42krakow/" )
+							a( target="_blank" href="https://www.facebook.com/lo42krakow/" )
 								.iconBox2
 									i.fab.fa-facebook-f.m-5
 
 								h1 XLII Liceum Ogólnokształcące w Krakowie
 
 						.col.icon1.p-0
-							a( href="https://www.facebook.com/groups/499859403913734" )
+							a( target="_blank" href="https://www.facebook.com/groups/499859403913734" )
 								.iconBox2
 									i.fab.fa-facebook-f.m-5
 
 								h1 Spotted XLII LO
 
 						.col.icon1.p-0
-							a( href="http://lo42krakow.pl/" )
+							a( target="_blank" href="http://lo42krakow.pl/" )
 								.iconBox2
 									i.fas.fa-file-code.m-5
 
@@ -77,21 +77,21 @@ html( lang="pl" )
 
 					.row.no-gutters.d-flex
 						.col.icon1.p-0
-							a( href="https://www.instagram.com/liceum42/" )
+							a( target="_blank" href="https://www.instagram.com/liceum42/" )
 								.iconBox2
 									i.fab.fa-instagram.m-5
 
 								h1 liceum42
 
 						.col.icon1.p-0
-							a( href="https://www.instagram.com/su_42lo/" )
+							a( target="_blank" href="https://www.instagram.com/su_42lo/" )
 								.iconBox2
 									i.fab.fa-instagram.m-5
 
 								h1 su_42lo
 
 						.col.icon1.p-0
-							a( href="https://www.instagram.com/42lo_tellonym/" )
+							a( target="_blank" href="https://www.instagram.com/42lo_tellonym/" )
 								.iconBox2
 									i.fab.fa-instagram.m-5
 
