--- a/resources/scss/blog/_responsive.scss
+++ b/resources/scss/blog/_responsive.scss
@@ -30,7 +30,7 @@
 		}
 	}
 
-	.articleWrapper {
+	.blog-content-wrapper {
 		.title {
 			font-size: 3rem !important;
 		}
@@ -82,7 +82,7 @@
 		font-size: 3rem;
 	}
 
-	.articleWrapper {
+	.blog-content-wrapper {
 		.autor {
 			h3 {
 				font-size: 1.5rem;
@@ -110,12 +110,12 @@
 		display: none;
 	}
 
-	.articleWrapper {
+	.blog-content-wrapper {
 		.title {
 			font-size: 4rem !important;
 		}
-
 	}
+
 
 	.yellowbar {
 		width: calc(100% - 0.5rem);
